# python-jira-plus

./: .gitignore  .pre-commit-config.yaml  README.md  env.template  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: publish_to_pypi.yml
python_jira_plus/: __init__.py  const.py  consts.py  describe_allowed_value.py  jira_base.py  jira_cloud.py  jira_on_premise.py  jira_plus.py
tests/: conftest.py  test_describe_allowed_value.py  test_jira_cloud_integration.py  test_jira_plus.py
usage_example/: create_jira_issue.py  featch_jira_issues.py  get_jira_issue.py  update_jira_issue.py
