[project]
name = "python-jira-plus"
version = "0.1.9"
# other configurations...

[project.urls]
"Homepage" = "https://github.com/aviz92/python-jira-plus"
"Bug Tracker" = "https://github.com/aviz92/python-jira-plus/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100
